# rust-sql-base

./: .env  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/public/: index.html
backend/src/: main.rs
db/: check_data.sql  init.sql
